--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,6 @@
-<div class="fixed-bottom mt-5" th:fragment="footer">
-    <p class="text-center align-middle py-3 bg-light-subtle m-0">Re:foam</p>
-</div>
+<footer th:fragment="footer" class="footer-bg py-2" data-bs-theme="dark" >
+        <div class="container text-center text-white">
+            <p class="my-3 nav-font">&copy Refoam ALL RIGHTS RESERVED</p>
+        </div>
+</footer>
+
