--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,13 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
+<nav th:fragment="navbar"
+     class="navbar navbar-expand-md nav-bg fixed-top ">
+    <!-- 메뉴바 시작-->
+        <div class="container-fluid">
+            <a class="navbar-brand nav-font" href="index.html">
+                <img src="images/logo_only.svg" alt="logo" style="height: 40px;" class="my-2 ms-3">
+                <img src="images/logo_name.svg" alt="logo" style="height: 40px;" class="my-2 logo-hidden">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item my-1">
+                        <img src="images/person-circle.svg" alt="사람아이콘">
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-font nav-no-link mx-2">관리자</span>
+                    </li>
+                    <li class="nav-item my-1 mx-2">
+                        <a href="연습.html"><img src="images/bell-fill.svg" alt="종모양" class="position-relative"></a>
+                        <span class="translate-middle badge rounded-pill">
+                            99+
+                            <span class="visually-hidden">unread messages</span>
+                        </span>
+                    </li>
+                    <li class="nav-item my-1">
+                        <a class="nav-font btn btn-sm btn-primary" href="연습.html">로그아웃</a>
+                    </li>
 
-<body>
-<nav th:fragment="navbar" class="container-fluid navbar navbar-expand-lg bg-body-tertiary">
 
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle nav-font" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            계정관리
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item nav-font" href="private-interior.html">직원리스트</a></li>
+                            <li><a class="dropdown-item nav-font" href="business-interior.html">직원정보등록</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle nav-font" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            재고관리
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item nav-font" href="private-interior.html">재고 리스트</a></li>
+                            <li><a class="dropdown-item nav-font" href="business-interior.html">재고입력발주</a></li>
+
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle nav-font" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            공정관리
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item nav-font" href="private-interior.html">제품생산</a></li>
+                            <li><a class="dropdown-item nav-font" href="business-interior.html">공정결과</a></li>
+                            <li><a class="dropdown-item nav-font" href="business-interior.html">주문리스트</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-font" href="contact.html">에러모니터링</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    <div id="nav-hidden"></div>
+    <!-- 메뉴바 끝 -->
 </nav>
-</body>
-</html>
