--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
@@ -17,6 +17,7 @@
 <footer th:replace="~{fragments/footer :: footer}"></footer>
 <!--스크립트 영역-->
 <script th:src="@{/js/bootstrap.bundle.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <th:block layout:fragment="script"></th:block>
 </body>
 </html>
