layout/navbar/footer modified

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -19,14 +19,14 @@
                         <span class="nav-font nav-no-link mx-2">관리자</span>
                     </li>
                     <li class="nav-item my-1 mx-2">
-                        <a href="연습.html"><img src="images/bell-fill.svg" alt="종모양" class="position-relative"></a>
+                        <a href="home.html"><img src="images/bell-fill.svg" alt="종모양" class="position-relative"></a>
                         <span class="translate-middle badge rounded-pill">
                             99+
                             <span class="visually-hidden">unread messages</span>
                         </span>
                     </li>
                     <li class="nav-item my-1">
-                        <a class="nav-font btn btn-sm btn-primary" href="연습.html">로그아웃</a>
+                        <a class="nav-font btn btn-sm btn-primary" href="index.html">로그아웃</a>
                     </li>
 
 
@@ -68,6 +68,6 @@
                 </ul>
             </div>
         </div>
-    <div id="nav-hidden"></div>
     <!-- 메뉴바 끝 -->
 </nav>
+<div id="nav-hidden"></div>
