layout/navbar/footer modified

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <nav th:fragment="navbar"
-     class="navbar navbar-expand-md nav-bg fixed-top ">
+     class="navbar navbar-expand-md nav-bg">
     <!-- 메뉴바 시작-->
         <div class="container-fluid">
             <a class="navbar-brand nav-font" href="index.html">
@@ -69,5 +69,6 @@
             </div>
         </div>
     <!-- 메뉴바 끝 -->
+    <div id="nav-hidden"></div>
 </nav>
-<div id="nav-hidden"></div>
+
