--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,60 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container" layout:fragment="content">
-    home
+
+    <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>John</td>
+            <td>Doe</td>
+            <td>@social</td>
+        </tr>
+        </tbody>
+    </table>
+
+    <div class="table-responsive table-lg ">
+        <table class="table table-hover table-striped">
+            <tr>
+                <th>#</th>
+                <th>원재료명</th>
+                <th>수량</th>
+                <th>입고날짜</th>
+                <th>담당직원</th>
+                <th>#</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>EVA</td>
+                <td>50</td>
+                <td>2000-00-00 00:00</td>
+                <td>관리자</td>
+                <td>
+                    <button class="btn btn-sm">수정</button>
+                    <button class="btn btn-sm">삭제</button>
+                </td>
+            </tr>
+        </table>
+    </div>
+
 </div>
 </html>
