--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,60 +1,28 @@
-<html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html layout:decorate="~{layout_login}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container" layout:fragment="content">
+    <div class="vh-100 d-flex flex-column justify-content-center align-items-center ">
+        <div class="row w-100">
+            <div class="col-lg-4 col-md-3"></div>
+            <div class="col-lg-4 col-md-6">
+                <form class="">
+                    <div class="mb-3">
+                        <label class="form-label fw-bold">아이디</label>
+                        <input type="text" class="form-control" placeholder="아이디를 입력하세요">
 
-    <table class="table table-striped table-hover">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>John</td>
-            <td>Doe</td>
-            <td>@social</td>
-        </tr>
-        </tbody>
-    </table>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label fw-bold">비밀번호</label>
+                        <input type="password" class="form-control" placeholder="비밀번호를 입력하세요">
 
-    <div class="table-responsive table-lg ">
-        <table class="table table-hover table-striped">
-            <tr>
-                <th>#</th>
-                <th>원재료명</th>
-                <th>수량</th>
-                <th>입고날짜</th>
-                <th>담당직원</th>
-                <th>#</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>EVA</td>
-                <td>50</td>
-                <td>2000-00-00 00:00</td>
-                <td>관리자</td>
-                <td>
-                    <button class="btn btn-sm">수정</button>
-                    <button class="btn btn-sm">삭제</button>
-                </td>
-            </tr>
-        </table>
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" class="w-100 btn btn-primary btn-lg">로그인</button>
+                    </div>
+                    <p class="text-center text-secondary fs-6">아이디:test, 비밀번호:1111 로 접속하시면<br> 모든 과정을 체험할 수 있습니다.</p>
+                </form>
+            </div>
+            <div class="col-lg-4 col-md-3"></div>
+        </div>
     </div>
-
 </div>
 </html>
