--- a/src/main/resources/templates/material/createMaterialForm.html
+++ b/src/main/resources/templates/material/createMaterialForm.html
@@ -1,6 +1,34 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<div class="container mb-5" layout:fragment="content">
-    <h2 class="py-4">재고 입력</h2>
-
+<div class="container " layout:fragment="content">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <form role="form" method="post" class="py-2 col-md-8">
+            <h2 class="py-4">재고 입력</h2>
+            <!--<div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors()}">
+                <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
+            </div>-->
+            <div class="mb-2">
+                <label  class="form-label fw-bold">원재료</label>
+                <select  class="form-select">
+                    <option value="">원재료를 선택하세요</option>
+                    <option value="">EVA</option>
+                    <option value="">원재료를 선택하세요</option>
+                    <option value="">원재료를 선택하세요</option>
+                </select>
+            </div>
+            <div class="mb-2">
+                <label class="form-label fw-bold">수량</label>
+                <input class="form-control" >
+            </div>
+            <div class="mb-2">
+                <label class="form-label fw-bold">입고날짜</label>
+                <input class="form-control" >
+            </div>
+            <div class="text-end">
+                <button type="submit" class="btn btn-warning btn-sm">입력</button>
+            </div>
+        </form>
+        <div class="col-md-2"></div>
+    </div>
 </div>
 </html>
