--- a/src/main/resources/templates/material/createMaterialForm.html
+++ b/src/main/resources/templates/material/createMaterialForm.html
@@ -1,34 +1,80 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container " layout:fragment="content">
     <div class="row">
-        <div class="col-md-2"></div>
-        <form role="form" method="post" class="py-2 col-md-8">
-            <h2 class="py-4">재고 입력</h2>
-            <!--<div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors()}">
-                <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
-            </div>-->
-            <div class="mb-2">
-                <label  class="form-label fw-bold">원재료</label>
-                <select  class="form-select">
-                    <option value="">원재료를 선택하세요</option>
-                    <option value="">EVA</option>
-                    <option value="">원재료를 선택하세요</option>
-                    <option value="">원재료를 선택하세요</option>
-                </select>
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="row">
+                <form role="form" method="post" class="py-2 col-lg-6 order-1 order-lg-1 order-md-2">
+                    <h2 class="py-4">재고 입력</h2>
+                    <!--<div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors()}">
+                        <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
+                    </div>-->
+                    <div class="mb-2">
+                        <label  class="form-label fw-bold">원재료</label>
+                        <select  class="form-select">
+                            <option value="">원재료를 선택하세요</option>
+                            <option value="">EVA</option>
+                            <option value="">TITANIUM_DIOXIDE</option>
+                            <option value="">CARBON_BLACK</option>
+                            <option value="">ULTRAMARINE_BLUE</option>
+                            <option value="">IRON_OXIDE_RED</option>
+                        </select>
+                    </div>
+                    <div class="mb-2">
+                        <label class="form-label fw-bold">수량</label>
+                        <input class="form-control" >
+                    </div>
+                    <div class="mb-2">
+                        <label class="form-label fw-bold">입고날짜</label>
+                        <input class="form-control" >
+                    </div>
+                    <div class="text-end">
+                        <button type="submit" class="btn btn-warning btn-sm">입력</button>
+                    </div>
+                </form>
+                <form role="form" method="post" class="py-2 col-lg-6 order-2 order-lg-2 order-md-1">
+                    <h2 class="py-4">재고 발주 예측하기</h2>
+                    <!--<div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors()}">
+                        <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
+                    </div>-->
+                    <div class="mb-2">
+                        <p>3일 뒤 시점의 발주 수량 예측입니다</p>
+                        <label  class="form-label fw-bold">원재료</label>
+                        <div class="d-flex">
+                            <select class="form-select w-75">
+                                <option value="">원재료를 선택하세요</option>
+                                <option value="">EVA</option>
+                                <option value="">TITANIUM_DIOXIDE</option>
+                                <option value="">CARBON_BLACK</option>
+                                <option value="">ULTRAMARINE_BLUE</option>
+                                <option value="">IRON_OXIDE_RED</option>
+                            </select>
+                            <button class="btn btn-primary ms-auto">예측하기</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-7 mb-2">
+                            <label class="form-label fw-bold">날짜</label>
+                            <input class="form-control mb-2" type="date">
+                            <input class="form-control mb-2" type="date">
+                            <input class="form-control mb-2" type="date">
+                        </div>
+                        <div class="col-5 mb-2">
+                            <label class="form-label fw-bold">수량</label>
+                            <input class="form-control mb-2" >
+                            <input class="form-control mb-2" >
+                            <input class="form-control mb-2" >
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                        <label class=" form-label fw-bold">예측 결과</label>
+                    </div>
+                    <div class="mb-2">예측 일자 (D+3) : 000 개 입니다</div>
+                    <div class="mb-2">예측된 발주 수량 : 000개 입니다</div>
+                </form>
             </div>
-            <div class="mb-2">
-                <label class="form-label fw-bold">수량</label>
-                <input class="form-control" >
-            </div>
-            <div class="mb-2">
-                <label class="form-label fw-bold">입고날짜</label>
-                <input class="form-control" >
-            </div>
-            <div class="text-end">
-                <button type="submit" class="btn btn-warning btn-sm">입력</button>
-            </div>
-        </form>
-        <div class="col-md-2"></div>
+        </div>
+        <div class="col-md-1"></div>
     </div>
 </div>
 </html>
