--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -11,6 +11,7 @@
 <body>
 <!--navbar 영역-->
 <nav th:replace="~{fragments/navbar :: navbar}"></nav>
+<div id="nav-hidden"></div>
 <!--content 영역-->
 <th:block layout:fragment="content"></th:block>
 <!--footer 영역-->
