--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,10 +1,10 @@
 <nav th:fragment="navbar"
-     class="navbar navbar-expand-md nav-bg">
+     class="navbar navbar-expand-md nav-bg fixed-top">
     <!-- 메뉴바 시작-->
         <div class="container-fluid">
             <a class="navbar-brand nav-font" th:href="@{/}">
-                <img src="/images/logo_only.svg" alt="logo" style="height: 40px;" class="my-2 ms-3">
-                <img src="/images/logo_name.svg" alt="logo" style="height: 40px;" class="my-2 logo-hidden">
+                <img src="/images/logo_only.svg" alt="logo"  class="my-2 ms-3 nav-img">
+                <img src="/images/logo_name.svg" alt="logo"  class="my-2 md-hidden nav-img">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,21 +12,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-                    <li class="nav-item my-1">
-                        <img src="/images/person-circle.svg" alt="사람아이콘">
-                    </li>
-                    <li class="nav-item">
-                        <span class="nav-font nav-no-link mx-2">관리자</span>
-                    </li>
-                    <li class="nav-item my-1 mx-2">
-                        <a th:href="@{/list}"><img src="/images/bell-fill.svg" alt="종모양" class="position-relative"></a>
+                    <li class="nav-item my-1 d-flex align-items-center gap-2 nav-account">
+                        <img src="/images/person-circle.svg" alt="사람 아이콘">
+                        <span class="nav-font nav-no-link">관리자</span>
+
+                        <a th:href="@{/list}" class="position-relative">
+                            <img src="/images/bell-fill.svg" alt="종모양" ></a>
                         <span class="translate-middle badge rounded-pill">
                             99+
                             <span class="visually-hidden">unread messages</span>
                         </span>
-                    </li>
-                    <li class="nav-item my-1">
-                        <a class="nav-font btn btn-sm btn-primary" th:href="@{/}">로그아웃</a>
+                        <a class="nav-font btn btn-sm btn-refoam margin-minus" th:href="@{/}">로그아웃</a>
+                        <div class="vr md-hidden"></div>
                     </li>
 
 
@@ -69,6 +66,6 @@
             </div>
         </div>
     <!-- 메뉴바 끝 -->
-    <div id="nav-hidden"></div>
 </nav>
+
 
