--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -138,7 +138,15 @@ ul.navbar-nav {
    filter: invert(100%);
 }
 
-
+/* table size 설정 */
+@media (max-width: 768px) {
+    .table-lg{  display: none;
+    }
+}
+@media (min-width: 768px) {
+    .table-md{  display: none;
+    }
+}
 
 /* 테이블 색상 영역 */
 .table {
