--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<footer th:fragment="footer" class="footer-bg py-2 fixed-bottom">
+<footer th:fragment="footer" class="footer-bg py-2">
         <div class="container text-center text-white">
             <p class="my-3 nav-font">&copy Refoam ALL RIGHTS RESERVED</p>
         </div>
