--- a/src/main/resources/templates/employee/employeeList.html
+++ b/src/main/resources/templates/employee/employeeList.html
@@ -1,6 +1,81 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
-    <h2 class="py-4">직원 정보 수정</h2>
+    <h2 class="py-4">직원 리스트</h2>
 
+    <div class="table-responsive table-lg">
+        <table class="table table-hover table-striped">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>ID</th>
+                <th>이름</th>
+                <th>직위</th>
+                <th>연락처</th>
+                <th>  </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="employee : ${employees}">
+                <td th:text="${employee.id}">1</td>
+                <td th:text="${employee.loginId}">ID</td>
+                <td th:text="${employee.username}">name</td>
+                <td th:text="${employee.position}">position</td>
+                <td th:text="${employee.phone}">phone</td>
+                <td class="text-center">
+                    <a href="#" th:href="@{/employee/{id}/edit(id=${employee.id})}" class="btn btn-refoam me-3" role="button">수정</a>
+                    <a href="#" th:href="@{/employee/{id}/delete(id=${employee.id})}" class="btn btn-delete" role="button">삭제</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="table-responsive table-md">
+        <table class="table table-hover table-striped">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>ID</th>
+                <th>이름</th>
+            </tr>
+            <tr>
+                <th>직위</th>
+                <th>연락처</th>
+                <th> </th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:each="employee : ${employees}">
+                <tr>
+                    <td th:text="${employee.id}">1</td>
+                    <td th:text="${employee.loginId}">ID</td>
+                    <td th:text="${employee.username}">name</td>
+                </tr>
+                <tr>
+                    <td th:text="${employee.position}">position</td>
+                    <td th:text="${employee.phone}">phone</td>
+                    <td class="text-center">
+                        <a href="#" th:href="@{/employee/{id}/edit(id=${employee.id})}" class="btn btn-refoam" role="button">수정</a>
+                        <a href="#" th:href="@{/employee/{id}/delete(id=${employee.id})}" class="btn btn-delete" role="button">삭제</a>
+                    </td>
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
+    </div>
+    <nav class="">
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled">
+                <a class="page-link">&lt Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next &gt</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 </html>
