--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,15 @@
 <html layout:decorate="~{layout_login}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<div class="container" layout:fragment="content">
+<div class="bg-login" layout:fragment="content">
+    <div class="container">
     <div class="vh-100 d-flex flex-column justify-content-center align-items-center ">
         <div class="row w-100">
             <div class="col-lg-4 col-md-3"></div>
             <div class="col-lg-4 col-md-6">
-                <form class="">
+                <form class="border p-3 rounded shadow-sm bg-white">
+                    <div class="text-center mb-4">
+                        <img src="/images/logo.svg" alt="로고" class="img-fluid w-50" >
+                    </div>
+
                     <div class="mb-3">
                         <label class="form-label fw-bold">아이디</label>
                         <input type="text" class="form-control" placeholder="아이디를 입력하세요">
@@ -16,7 +21,7 @@
 
                     </div>
                     <div class="mb-3">
-                        <button type="submit" class="w-100 btn btn-primary btn-lg">로그인</button>
+                        <button type="submit" class="w-100 btn btn-refoam btn-lg">로그인</button>
                     </div>
                     <p class="text-center text-secondary fs-6">아이디:test, 비밀번호:1111 로 접속하시면<br> 모든 과정을 체험할 수 있습니다.</p>
                 </form>
@@ -24,5 +29,6 @@
             <div class="col-lg-4 col-md-3"></div>
         </div>
     </div>
+        </div>
 </div>
 </html>
