--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,19 +5,22 @@
         <div class="row w-100">
             <div class="col-lg-4 col-md-3"></div>
             <div class="col-lg-4 col-md-6">
-                <form class="border p-3 rounded shadow-sm bg-white">
-                    <div class="text-center mb-4">
+                <form class="border p-4 rounded shadow-sm bg-white" th:object="${loginForm}" method="post">
+                    <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+                        <div th:each="err:${#fields.allErrors()}" th:text="${err}"></div>
+                    </div>
+                    <div class="text-center mb-3">
                         <img src="/images/logo.svg" alt="로고" class="img-fluid w-50" >
                     </div>
 
-                    <div class="mb-3">
-                        <label class="form-label fw-bold">아이디</label>
-                        <input type="text" class="form-control" placeholder="아이디를 입력하세요">
+                    <div class="mb-2">
+                        <label class="form-label fw-bold" th:for="loginId">아이디</label>
+                        <input type="text" class="form-control" th:field="*{loginId}" placeholder="아이디를 입력하세요">
 
                     </div>
                     <div class="mb-3">
-                        <label class="form-label fw-bold">비밀번호</label>
-                        <input type="password" class="form-control" placeholder="비밀번호를 입력하세요">
+                        <label class="form-label fw-bold" th:for="password">비밀번호</label>
+                        <input type="password" class="form-control" th:field="*{password}" placeholder="비밀번호를 입력하세요">
 
                     </div>
                     <div class="mb-3">
