--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,6 +1,8 @@
 <html layout:decorate="~{layout}" lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
-    <h2 class="py-4">에러 모니터링</h2>
+    <h2 class="py-4">공정 건수</h2>
+    <h2 class="py-4">에러 건수</h2>
+    <h2 class="py-4">재고 건수</h2>
 
 </div>
 </html>
