--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
      class="navbar navbar-expand-md nav-bg fixed-top">
     <!-- 메뉴바 시작-->
         <div class="container-fluid">
-            <a class="navbar-brand nav-font" th:href="@{/}">
+            <a class="navbar-brand nav-font" th:href="@{/main}">
                 <img src="/images/logo_only.svg" alt="logo"  class="my-2 ms-3 nav-img">
                 <img src="/images/logo_name.svg" alt="logo"  class="my-2 md-hidden nav-img">
             </a>
