--- a/src/main/resources/templates/employee/createEmployeeForm.html
+++ b/src/main/resources/templates/employee/createEmployeeForm.html
@@ -27,8 +27,8 @@
                 </select>
             </div>
             <div class="mb-3">
-                <label class="form-label fw-bold" th:for="*{phone}">연락처</label>
-                <input type="text" class="form-control" th:field="*{phone}" placeholder="010-xxxx-xxxx">
+                <label class="form-label fw-bold" th:for="*{email}">연락처</label>
+                <input type="text" class="form-control" th:field="*{email}" placeholder="test@email.com">
             </div>
             <div class="text-end">
                 <a th:href="@{/list}" class="btn btn-dark me-3">리스트</a>
