--- a/src/main/resources/templates/employee/editEmployeeForm.html
+++ b/src/main/resources/templates/employee/editEmployeeForm.html
@@ -28,8 +28,8 @@
                 </select>
             </div>
             <div class="mb-3">
-                <label class="form-label fw-bold" th:for="*{phone}">연락처</label>
-                <input type="text" class="form-control" th:field="*{phone}" th:placeholder="*{phone}">
+                <label class="form-label fw-bold" th:for="*{email}">연락처</label>
+                <input type="text" class="form-control" th:field="*{email}" th:placeholder="*{email}">
             </div>
             <div class="text-end">
                 <a th:href="@{/list}" class="btn btn-dark me-3">리스트</a>
