--- a/src/main/resources/templates/employee/employeeList.html
+++ b/src/main/resources/templates/employee/employeeList.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html layout:decorate="~{layout}" lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
     <h2 class="py-4">직원 리스트</h2>
 
@@ -6,24 +6,24 @@
         <table class="table table-hover table-striped">
             <thead>
             <tr>
-                <th> #</th>
+                <th class="text-center"> #</th>
                 <th>ID</th>
                 <th>이름</th>
                 <th>직위</th>
                 <th>연락처</th>
-                <th>  </th>
+                <th class="text-center"> #</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="employee : ${employees}">
-                <td th:text="${employee.id}">1</td>
+                <td th:text="${employee.id}" class="text-center">1</td>
                 <td th:text="${employee.loginId}">ID</td>
                 <td th:text="${employee.username}">name</td>
                 <td th:text="${employee.position}">position</td>
                 <td th:text="${employee.email}">email</td>
                 <td class="text-center">
-                    <a href="#" th:href="@{/employee/{id}/edit(id=${employee.id})}" class="btn btn-refoam me-3" role="button">수정</a>
-                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${employee.id}" class="btn btn-delete">삭제</button>
+                    <a href="#" th:href="@{/employee/{id}/edit(id=${employee.id})}" class="btn btn-sm btn-refoam px-3 me-3" role="button">수 정</a>
+                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${employee.id}" class="btn btn-delete btn-sm px-3">삭 제</button>
                 </td>
             </tr>
             </tbody>
@@ -40,7 +40,7 @@
             <tr>
                 <th>직위</th>
                 <th>연락처</th>
-                <th> </th>
+                <th> # </th>
             </tr>
             </thead>
             <tbody>
@@ -53,9 +53,9 @@
                 <tr>
                     <td th:text="${employee.position}">position</td>
                     <td th:text="${employee.email}">phone</td>
-                    <td class="text-center">
-                        <a href="#" th:href="@{/employee/{id}/edit(id=${employee.id})}" class="btn btn-refoam me-3" role="button">수정</a>
-                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${employee.id}" class="btn btn-delete">삭제</button>
+                    <td>
+                        <a href="#" th:href="@{/employee/{id}/edit(id=${employee.id})}" class="btn btn-sm btn-refoam px-3 me-3" role="button">수 정</a>
+                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${employee.id}" class="btn btn-delete btn-sm px-3">삭 제</button>
                     </td>
                 </tr>
             </th:block>
@@ -68,7 +68,7 @@
              th:id="'modal__' + ${employee.id}"
              tabindex="-1"
              aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5">삭제 확인</h1>
@@ -78,8 +78,8 @@
                          th:text="|ID: ${employee.loginId}, 이름: ${employee.username}님을 삭제하시겠습니까?|">
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-                        <button type="button" class="btn btn-danger"
+                        <button type="button" class="btn btn-refoam" data-bs-dismiss="modal">취소</button>
+                        <button type="button" class="btn btn-delete"
                                 th:onclick="|location.href='@{/employee/{id}/delete(id=${employee.id})}'|">삭제</button>
                     </div>
                 </div>
@@ -91,8 +91,8 @@
             <li class="page-item disabled">
                 <a class="page-link">&lt Previous</a>
             </li>
-            <li class="page-item" aria-current="page"><a class="page-link" href="#">1</a></li>
-            <li class="page-item active">
+            <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
+            <li class="page-item ">
                 <a class="page-link" href="#">2</a>
             </li>
             <li class="page-item"><a class="page-link" href="#">3</a></li>
