--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,4 @@
-<nav th:fragment="navbar"
+<nav th:fragment="navbar(activeMenu)"
      class="navbar navbar-expand-md nav-bg fixed-top">
     <!-- 메뉴바 시작-->
         <div class="container-fluid">
@@ -31,7 +31,7 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle nav-font" href="#" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
+                           aria-expanded="false" th:classappend="${activeMenu == 1} ? ' active' : ''">
                             계정관리
                         </a>
                         <ul class="dropdown-menu">
@@ -41,7 +41,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle nav-font" href="#" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
+                           aria-expanded="false" th:classappend="${activeMenu == 2} ? ' active' : ''">
                             재고관리
                         </a>
                         <ul class="dropdown-menu">
@@ -52,7 +52,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle nav-font" href="#" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
+                           aria-expanded="false" th:classappend="${activeMenu == 3} ? ' active' : ''">
                             공정관리
                         </a>
                         <ul class="dropdown-menu">
@@ -61,7 +61,7 @@
                             <li><a class="dropdown-item nav-font" th:href="@{/order/list}">주문리스트</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" th:classappend="${activeMenu == 4} ? ' active' : ''">
                         <a class="nav-link nav-font" th:href="@{/monitoring/main}">에러모니터링</a>
                     </li>
                 </ul>
