--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,16 @@
-<html layout:decorate="~{layout_login}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html layout:decorate="~{layout_login}" lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="bg-login" layout:fragment="content">
     <div class="container">
     <div class="vh-100 d-flex flex-column justify-content-center align-items-center ">
         <div class="row w-100">
             <div class="col-lg-4 col-md-3"></div>
             <div class="col-lg-4 col-md-6">
-                <form class="border p-4 rounded shadow-sm bg-white" th:object="${loginForm}" method="post">
+                <form class="border p-4 rounded shadow-sm bg-white" th:object="${loginForm}" method="post" th:action="@{/}">
+                    <!-- ✅ redirectURL hidden 필드 추가 -->
+<!--                    name="redirectURL": 컨트롤러에서 @RequestParam("redirectURL")로 받을 수 있게 함
+                        th:value="${param.redirectURL}": 현재 요청 URL에 있는 redirectURL 파라미터를 폼으로 넘김-->
+                    <input type="hidden" name="redirectURL" th:value="${param.redirectURL}" />
+
                     <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
                         <div th:each="err:${#fields.allErrors()}" th:text="${err}"></div>
                     </div>
